--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                             <div class="col-md-4">
                                 <div class="image-container">
                                 <a href="https://bootstrap.hayet-ramoul.com" target="_blank">
-                                    <img src="images/carou1.jpg" class="img-thumbnail" alt="facebook share">
+                                    <img src="images/carou1.jpg" class="img-thumbnail" alt="">
                                     <div class="overlay">
                                         <p>Site réalisé en formation : Création d'un site web en HTML et CSS avec l'intégration de
                                             Bootstrap pour un design responsive et une mise en page moderne.</p>
@@ -267,7 +267,7 @@
                             <div class="col-md-4">
                                 <div class="image-container">
                                 <a href="https://etatdeslieux.hayet-ramoul.com" target="_blank">
-                                    <img src="images/etatdeslieux.png" class="img-thumbnail" alt="youtube">
+                                    <img src="images/etatdeslieux.png" class="img-thumbnail" alt="">
                                     <div class="overlay">
                                         <p>Réalisé personnellement : Création d'une application web avec Symfony, dédiée à
                                         la gestion des états des lieux immobiliers. Le site comprend une interface utilisateur et 
@@ -281,7 +281,7 @@
                             <div class="col-md-4">
                                 <div class="image-container">
                                 <a href="https://maboutique.hayet-ramoul.com" target="_blank">
-                                    <img src="images/boutique.png" class="img-thumbnail" alt="twitter retweet">
+                                    <img src="images/boutique.png" class="img-thumbnail" alt="">
                                     <div class="overlay">
                                         <p>Réalisé personnellement : Développement d'un site e-commerce avec Symfony, 
                                             comprenant une interface utilisateur pour la navigation des produits, le processus 
@@ -295,7 +295,7 @@
                             <div class="col-md-4">
                                 <div class="image-container">
                                 <a href="https://agence.hayet-ramoul.com" target="_blank">
-                                    <img src="images/agence.png" class="img-thumbnail" alt="facebook video">
+                                    <img src="images/agence.png" class="img-thumbnail" alt="">
                                     <div class="overlay">
                                         <p>Réalisé personnellement : Création d'un site web avec WordPress en 
                                         utilisant Elementor pour une personnalisation facile et un design moderne. L'utilisation 
@@ -307,7 +307,7 @@
                         <div class="col-md-4">
                             <div class="image-container">
                             <a href="https://nomadic.hayet-ramoul.com" target="_blank">
-                                <img src="images/wordpress1.png" class="img-thumbnail" alt="twitter retweet">
+                                <img src="images/wordpress1.png" class="img-thumbnail" alt="">
                                 <div class="overlay">
                                     <p>Réalisé personnellement : Développement d'un site e-commerce avec WordPress et 
                                         WooCommerce, incluant une interface utilisateur intuitive pour la navigation des 
